k8s/immudb.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: immudb
  namespace: tracing-service
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: immudb
  template:
    metadata:
      labels:
        app.kubernetes.io/name: immudb
    spec:
      priorityClassName: core-services
      nodeSelector:
        chaimeleon.eu/target: core-services
      automountServiceAccountToken: false
      terminationGracePeriodSeconds: 60

      securityContext:   
         # Check the user immu's UID in the image that you plan to use  
        runAsUser: 3322
         # Check the user immu's GID in the image that you plan to use
        runAsGroup: 3322
        fsGroup: 2000
        runAsNonRoot: true
      containers:
        - name: immudb
          image: codenotary/immudb:1.11.1-bullseye-slim
          imagePullPolicy: IfNotPresent
          ports:
            - name: immudb-psql
              containerPort: 5432
              protocol: TCP
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          resources:
            requests:
              cpu: 250m
              memory: 4Gi
            limits:
              cpu: "1"
              memory: 4Gi
          volumeMounts:
            - name: data
              mountPath: /data
            - name: tmp
              mountPath: /tmp

      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: immudb-data
        - name: tmp
          emptyDir:
            medium: Memory
            sizeLimit: 512Mi

---

apiVersion: v1
kind: Service
metadata:
  name: immudb
  namespace: tracing-service
spec:
  ports:
  - port: 5432
    targetPort: 5432
    protocol: TCP
    name: api
  selector:
    app: immudb
