k8s/webservice.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: tracing-service
  namespace: tracing-service
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: tracing-service
  template:
    metadata:
      labels:
        app.kubernetes.io/name: tracing-service
    spec:
      priorityClassName: core-services
      nodeSelector:
        chaimeleon.eu/target: core-services
      automountServiceAccountToken: false
      terminationGracePeriodSeconds: 60

      securityContext:        
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 2000
        runAsNonRoot: true
      
      volumes:
        - name: tracing-service-config
          configMap:
            defaultMode: 440
            name: tracing-service-config
        - name: tracing-service-secrets
          secret:
            defaultMode: 440
            name: webservice-secrets
      containers:
        - name: webservice
          image: tracing-service:1.0.0-alpha
          imagePullPolicy: Always
          volumeMounts:
            - name: tracing-service-config
              mountPath: /opt/tracing/settings.yml
              subPath: settings.yml
            - name: tracing-service-secrets
              mountPath: /opt/tracing/settings.yml
              subPath: settings.yml
          ports:
            - name: webservice
              containerPort: 8080
              protocol: TCP
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          resources:
            requests:
              cpu: 250m
              memory: 2Gi
            limits:
              cpu: "1"
              memory: 2Gi

---
    
apiVersion: v1
kind: Service
metadata:
  name: tracing-service
  namespace: tracing-service
spec:
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: api
  selector:
    app: tracing-service

---

kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: tracing-service
  namespace: tracing-service
  annotations:
    nginx.ingress.kubernetes.io/limit-methods: "GET,HEAD,OPTIONS"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/enable-cors: 'true'
spec:
  rules:
    - host: <host>
      http:
        paths:
          - path: /tracing-service/api/v2/traces/ 
            pathType: Prefix
            backend:
              service:
                name: tracing-service
                port:
                  number: 8080
